Try to fix scrolling on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,8 @@
-.App {
-  text-align: center;
+html.ios {
+  overflow-x: hidden;
+  -webkit-overflow-scrolling: touch;
 }
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-}
-
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+html.ios,
+html.ios body {
+  height: 100% !important;
 }
